added contact and book request pages

--- a/views/bookrequest.html
+++ b/views/bookrequest.html
@@ -1,1 +1,53 @@
-<p>This is the bookrequest view.</p>
+
+<div class="container" align="center">
+  <h1>Need a Specific Book?</h1>
+  <h4>Fill Out the Form, and let us find it for you!</h4>
+  <input  placeholder="ISBN:"type="text"
+       ng-model="string"
+       [name="string"]
+       [required="string"]
+       [ng-required="string"]
+       [ng-minlength="number"]
+       [ng-maxlength="number"]
+       [pattern="string"]
+       [ng-pattern="string"]
+       [ng-change="string"]
+       [ng-trim="boolean"]>
+  <input  placeholder="Title:"type="text"
+       ng-model="string"
+       [name="string"]
+       [required="string"]
+       [ng-required="string"]
+       [ng-minlength="number"]
+       [ng-maxlength="number"]
+       [pattern="string"]
+       [ng-pattern="string"]
+       [ng-change="string"]
+       [ng-trim="boolean"]>
+  <input  placeholder="Author:"type="text"
+       ng-model="string"
+       [name="string"]
+       [required="string"]
+       [ng-required="string"]
+       [ng-minlength="number"]
+       [ng-maxlength="number"]
+       [pattern="string"]
+       [ng-pattern="string"]
+       [ng-change="string"]
+       [ng-trim="boolean"]>
+  <input  placeholder="Subject:"type="text"
+       ng-model="string"
+       [name="string"]
+       [required="string"]
+       [ng-required="string"]
+       [ng-minlength="number"]
+       [ng-maxlength="number"]
+       [pattern="string"]
+       [ng-pattern="string"]
+       [ng-change="string"]
+       [ng-trim="boolean"]>
+
+<div style="padding-top:20px" align="right">
+  <button class="btn btn-success">Find My Book</button>
+</div>
+</div>
