--- a/views/contact.html
+++ b/views/contact.html
@@ -1,1 +1,58 @@
-<p>This is the contact view.</p>
+<div class="container" align="center">
+  <h1>TxtBookSwap</h1>
+  <h4>Contact Us!</h4>
+  <p>
+    Phone : (989)773-4321</p>
+  <p> Email:
+  <a href="mailto:webmaster@txtbookswap.com?Subject=Website%20Help" target="_top">TXTBookSwap.com</a> </p>
+  <input  placeholder="Name:"type="text"
+       ng-model="string"
+       [name="string"]
+       [required="string"]
+       [ng-required="string"]
+       [ng-minlength="number"]
+       [ng-maxlength="number"]
+       [pattern="string"]
+       [ng-pattern="string"]
+       [ng-change="string"]
+       [ng-trim="boolean"]>
+       <input  placeholder="Email:"type="text"
+            ng-model="string"
+            [name="string"]
+            [required="string"]
+            [ng-required="string"]
+            [ng-minlength="number"]
+            [ng-maxlength="number"]
+            [pattern="string"]
+            [ng-pattern="string"]
+            [ng-change="string"]
+            [ng-trim="boolean"]>
+            <input  placeholder="Subject:"type="text"
+                 ng-model="string"
+                 [name="string"]
+                 [required="string"]
+                 [ng-required="string"]
+                 [ng-minlength="number"]
+                 [ng-maxlength="number"]
+                 [pattern="string"]
+                 [ng-pattern="string"]
+                 [ng-change="string"]
+                 [ng-trim="boolean"]>
+                 <input  placeholder="Message:"type="text"
+                      ng-model="textareaValue"
+                      [name="string"]
+                      [required="string"]
+                      [ng-required="string"]
+                      [ng-minlength="number"]
+                      [ng-maxlength="number"]
+                      [pattern="string"]
+                      [ng-pattern="string"]
+                      [ng-change="string"]
+                      [ng-trim="boolean"]>
+
+                      <div style="padding-top:20px" align="right">
+                        <button class="btn btn-success">Send Message</button>
+                      </div>
+
+
+</div>
