--- a/views/store2.html
+++ b/views/store2.html
@@ -1,4 +1,72 @@
-<div class="container"> <div class="row"> <div class="col-md-3"> <p class="lead">TXTBookSwap</p> <div class="list-group"> <li ng-repeat="cat in categories" class="list-group-item"> <a ng-href="#/category/{{cat.id}}">{{ cat.title }}</a> </li> </div> </div> <div class="col-md-9"> <div class="row carousel-holder"> <div class="col-md-12"> <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"> <ol class="carousel-indicators"> <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li> <li data-target="#carousel-example-generic" data-slide-to="1"></li> <li data-target="#carousel-example-generic" data-slide-to="2"></li> </ol> <div class="carousel-inner"> <div class="item active"> <img class="slide-image" src="../images/bookExchange.a596b2f0.jpg" alt=""> </div> <div class="item"> <img class="slide-image" src="../images/IcU.eeb919f5.jpg" alt=""> </div> <div class="item"> <img class="slide-image" src="../images/professorsBookShelf.c81b8b0e.jpg" alt=""> </div> </div> </div> </div> </div> <div class="row"> <div class="row"> <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="prod in features"> <div class="thumbnail"> <img src="{{prod.images[0].url.http}}" alt="{{prod.title}}"> <div class="caption"> <h5><a ng-href="#/product/{{prod.id}}" class="center">{{prod.title}}</a></h5> <h5>{{prod.slug}}</h5> <h4 class="pull-right">{{ prod.price.value }}</h4> </div> <div class="ratings"> <p class="pull-right">15 reviews</p> <p> <span class="glyphicon glyphicon-star"></span> <span class="glyphicon glyphicon-star"></span> <span class="glyphicon glyphicon-star"></span> <span class="glyphicon glyphicon-star"></span> <span class="glyphicon glyphicon-star"></span> </p> </div> </div>  </div> </div> <!-- <div class="col-sm-4 col-lg-4 col-md-4">
+<div class="container">
+
+        <div class="row">
+
+            <div class="col-md-3">
+                <p class="lead">TXTBookSwap</p>
+                <div class="list-group">
+                    <li ng-repeat="cat in categories" class="list-group-item">
+        <a ng-href="#/category/{{cat.id}}">{{ cat.title }}</a>
+      </li>
+                </div>
+            </div>
+
+            <div class="col-md-9">
+
+                <div class="row carousel-holder">
+
+                    <div class="col-md-12">
+                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <img class="slide-image" src="../images/bookExchange.a596b2f0.jpg"alt="">
+                                </div>
+                                <div class="item">
+                                    <img class="slide-image" src="../images/IcU.eeb919f5.jpg" alt="">
+                                </div>
+                                <div class="item">
+                                    <img class="slide-image" src="../images/professorsBookShelf.c81b8b0e.jpg" alt="">
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="row">
+                    <div class="row">
+                      <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="prod in features">
+
+                          <div class="thumbnail">
+                            <img src="{{prod.images[0].url.http}}" alt="{{prod.title}}" />
+
+                            <div class="caption">
+                            <h5><a ng-href="#/product/{{prod.id}}" class="center" >{{prod.title}}</h5>
+                            <h5>{{prod.slug}}</h5>
+                                <h4 class="pull-right">{{ prod.price.value }}</h4>
+                            </div>
+                            <div class="ratings">
+                                <p class="pull-right">15 reviews</p>
+                                <p>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                </p>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+
+                   <!-- <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
                             <img src='{{prod.images[0].url.http}}' alt="{{prod.title}}">
                             <div class="caption">
@@ -122,4 +190,4 @@
         </div>
 
     </div>
---></div></div></div></div>
+-->
