--- a/views/main.html
+++ b/views/main.html
@@ -1,1 +1,6 @@
-<div class="jumbotron"> <h1>TxtBookSwap</h1> <p class="lead"> Put something awesome here...or this could be the /store view. </p> </div>
+<div class="jumbotron">
+  <h1>TxtBookSwap</h1>
+  <p class="lead">
+    Put something awesome here...or this could be the /store view.
+  </p>
+</div>
